Altered the order of some itens

--- a/sponsor.html
+++ b/sponsor.html
@@ -290,6 +290,35 @@
 									</thead>
 									<tbody>
                   <tr class="item">
+                    <td class="firstTd"><div class="toggle">+</div>Presentation</td><td>1</td><td>1</td><td>1</td><td>1*</td>
+                          <tr class="description"><td colspan="5" class="noPadding">
+                            <div class="shadow">
+                              <h3>Presentation</h3>
+                        <p>You will be able to make a company's presentation to an audience of students that will be at the event. The presentation allows the company to introduce and explain to the students their field of work, the projects they are or were working on, but also the job opportunities that might be available to the students in the company.</p>
+                        <ul style="list-style-type:disc;">
+                        <li>45 min session divided as such:</li>
+                        <ol>
+                        <li>5 min to present  the company and get the students to learn a little more about the company itself;</li>
+                        <li>30 min presentation (Preferably by Engineers or LEIC/IST Alumni);</li>
+                        <li>Semi-technical presentations tend to be preferred by the students;</li>
+                        <li>10 min for Q&A.</li>
+                        </ol>
+                        <li>Congress Center – rooms with capacity for 50 or 70 students.</li>
+                      </ul>
+                        <div class="all-50 medium-60 small-100 tiny-100 push-center">
+                          <img src="img/sponsors/apresentacao1.jpg">
+                        </div>
+                        <p></p>
+                        <div class="all-50 medium-60 small-100 tiny-100 push-center">
+                          <img src="img/sponsors/apresentacao2.jpg">
+                        </div>
+                      </div>
+                          </td></tr>
+                  </tr>
+                  <tr class="item  alternate redirectPub">
+                    <td class="firstTd"><div class="toggle">+</div>Advertising Package</td><td>Exclusive</td><td>Maximum</td><td>Medium</td><td>Minimum</td></a>
+                  </tr>
+                  <tr class="item">
                     <td class="firstTd"><div class="toggle">+</div>Stand and Stand ++</td><td>5 days</td><td>3 days</td><td>2 days</td><td>2 days*</td>
                           <tr class="description"><td colspan="5" class="noPadding">
                             <div class="shadow">
@@ -321,35 +350,6 @@
                           </div>
                         </div>
                           </td></tr>
-                  </tr>
-                  <tr class="item alternate">
-                    <td class="firstTd"><div class="toggle">+</div>Presentation</td><td>1</td><td>1</td><td>1</td><td>1*</td>
-                          <tr class="description"><td colspan="5" class="noPadding">
-                            <div class="shadow">
-                              <h3>Presentation</h3>
-                        <p>You will be able to make a company's presentation to an audience of students that will be at the event. The presentation allows the company to introduce and explain to the students their field of work, the projects they are or were working on, but also the job opportunities that might be available to the students in the company.</p>
-                        <ul style="list-style-type:disc;">
-                        <li>45 min session divided as such:</li>
-                        <ol>
-                        <li>5 min to present  the company and get the students to learn a little more about the company itself;</li>
-                        <li>30 min presentation (Preferably by Engineers or LEIC/IST Alumni);</li>
-                        <li>Semi-technical presentations tend to be preferred by the students;</li>
-                        <li>10 min for Q&A.</li>
-                        </ol>
-                        <li>Congress Center – rooms with capacity for 50 or 70 students.</li>
-                      </ul>
-                        <div class="all-50 medium-60 small-100 tiny-100 push-center">
-                          <img src="img/sponsors/apresentacao1.jpg">
-                        </div>
-                        <p></p>
-                        <div class="all-50 medium-60 small-100 tiny-100 push-center">
-                          <img src="img/sponsors/apresentacao2.jpg">
-                        </div>
-                      </div>
-                          </td></tr>
-                  </tr>
-                  <tr class="item redirectPub">
-                    <td class="firstTd"><div class="toggle">+</div>Advertising Package</td><td>Exclusive</td><td>Maximum</td><td>Medium</td><td>Minimum</td></a>
                   </tr>
                   <tr class="item alternate">
                     <td class="firstTd"><div class="toggle">+</div> + University pack</td><td>1</td><td>1</td><td>1</td><td class="notIncluded">x</td>
@@ -512,6 +512,15 @@
 							            </td></tr>
 									</tr>
                   <tr class="item">
+                    <td class="firstTd"><div class="toggle">+</div>Logo on the event rollups</td><td>L</td><td>M</td><td>S</td><td class="notIncluded">x</td>
+                          <tr class="description"><td colspan="5" class="noPadding">
+                            <div class="shadow">
+                              <h3>Logo on the event rollups</h3>
+                        <p>The Company logo will be on our event rollups placed all over the event.</p>
+                      </div>
+                          </td></tr>
+                  </tr>
+                  <tr class="item alternate">
                     <td class="firstTd"><div class="toggle">+</div>Logo on tray mats</td><td>L</td><td>M</td><td>S</td><td class="notIncluded">x</td>
                           <tr class="description"><td colspan="5" class="noPadding">
                             <div class="shadow">
@@ -523,25 +532,7 @@
                       </div>
                           </td></tr>
                   </tr>
-                  <tr class="item alternate">
-                    <td class="firstTd"><div class="toggle">+</div>Logo on the event rollups</td><td>L</td><td>M</td><td>S</td><td class="notIncluded">x</td>
-                          <tr class="description"><td colspan="5" class="noPadding">
-                            <div class="shadow">
-                              <h3>Logo on the event rollups</h3>
-                        <p>The Company logo will be on our event rollups placed all over the event.</p>
-                      </div>
-                          </td></tr>
-                  </tr>
                   <tr class="item">
-                    <td class="firstTd"><div class="toggle">+</div>Logo on online banners</td><td>L</td><td>M</td><td class="notIncluded">x</td><td class="notIncluded">x</td>
-                          <tr class="description"><td colspan="5" class="noPadding">
-                            <div class="shadow">
-                              <h3>Logo on online banners</h3>
-                        <p>The Company logo will be online on websites and blogs that are  advertising partners of SINFO.</p>
-                      </div>
-                          </td></tr>
-                  </tr>
-                  <tr class="item alternate">
                     <td class="firstTd"><div class="toggle">+</div>Logo on our Social Network's cover</td><td>L</td><td>M</td><td class="notIncluded">x</td><td class="notIncluded">x</td>
                           <tr class="description"><td colspan="5" class="noPadding">
                             <div class="shadow">
@@ -553,7 +544,7 @@
                       </div>
                           </td></tr>
                   </tr>
-                  <tr class="item">
+                  <tr class="item alternate">
                     <td class="firstTd"><div class="toggle">+</div>Logo on our website (everywhere)</td><td>L</td><td>M</td><td class="notIncluded">x</td><td class="notIncluded">x</td>
                           <tr class="description"><td colspan="5" class="noPadding">
                             <div class="shadow">
@@ -565,7 +556,7 @@
                       </div>
                           </td></tr>
                   </tr>
-                  <tr class="item alternate">
+                  <tr class="item">
                     <td class="firstTd"><div class="toggle">+</div>Logo T-shirt</td><td>L</td><td>M</td><td class="notIncluded">x</td><td class="notIncluded">x</td>
                           <tr class="description"><td colspan="5" class="noPadding">
                             <div class="shadow">
@@ -575,6 +566,15 @@
                                   <img src="img/sponsors/tshirts-rsz.JPG">
                               </div>
                             </div>
+                          </td></tr>
+                  </tr>
+                  <tr class="item alternate">
+                    <td class="firstTd"><div class="toggle">+</div>Logo on online banners</td><td>L</td><td>M</td><td class="notIncluded">x</td><td class="notIncluded">x</td>
+                          <tr class="description"><td colspan="5" class="noPadding">
+                            <div class="shadow">
+                              <h3>Logo on online banners</h3>
+                        <p>The Company logo will be online on websites and blogs that are  advertising partners of SINFO.</p>
+                      </div>
                           </td></tr>
                   </tr>
                   <tr class="item">
@@ -595,19 +595,7 @@
                       </div>
                           </td></tr>
                   </tr>
-                  <tr class="item alternate">
-                    <td class="firstTd"><div class="toggle">+</div>Logo during the break of our live stream</td><td>L</td><td>M</td><td class="notIncluded">x</td><td class="notIncluded">x</td>
-                          <tr class="description"><td colspan="5" class="noPadding">
-                            <div class="shadow">
-                              <h3>Logo during the break of our live stream</h3>
-                        <p>SINFO will be transmitted online through our live stream to more than 20.000 people online and to many of our partner Universities that will transmit SINFO live. The Company will have their logo shown during the transmission breaks. This offers a great way of reaching people who couldn't make it to the event that particular day or at all.</p>
-                        <div class="all-50 medium-60 small-100 tiny-100 push-center">
-                            <img src="img/sponsors/liveStreamPic.jpg">
-                        </div>
-                      </div>
-                          </td></tr>
-                  </tr>
-									<tr class="item">
+									<tr class="item alternate">
 										<td class="firstTd"><div class="toggle">+</div>Logo on posters</td><td>L</td><td>M</td><td class="notIncluded">x</td><td class="notIncluded">x</td>
 							            <tr class="description"><td colspan="5" class="noPadding">
 							            	<div class="shadow">
@@ -616,24 +604,15 @@
 											</div>
 							            </td></tr>
 									</tr>
-                  <tr class="item alternate">
-                    <td class="firstTd"><div class="toggle">+</div>Logo on pens</td><td>√</td><td class="notIncluded">x</td><td class="notIncluded">x</td><td class="notIncluded">x</td>
-                          <tr class="description"><td colspan="5" class="noPadding">
-                            <div class="shadow">
-                              <h3>Logo on pens</h3>
-                        <p>The Company logo will be on more than 2.000 pens distributed during the event.</p>
-                        <div class="all-50 medium-60 small-100 tiny-100 push-center">
-                          <img src="img/sponsors/caneta-rsz.JPG">
-                        </div>
-                      </div>
-                          </td></tr>
-                  </tr>
                   <tr class="item">
-                    <td class="firstTd"><div class="toggle">+</div>Custom commercial</td><td>√</td><td class="notIncluded">x</td><td class="notIncluded">x</td><td class="notIncluded">x</td>
+                    <td class="firstTd"><div class="toggle">+</div>Logo during the break of our live stream</td><td>L</td><td>M</td><td class="notIncluded">x</td><td class="notIncluded">x</td>
                           <tr class="description"><td colspan="5" class="noPadding">
                             <div class="shadow">
-                              <h3>Custom commercial</h3>
-                        <p>SINFO will spread the Company's promos/commercials on the screens scattered all around the event as well as on the live stream breaks.</p>
+                              <h3>Logo during the break of our live stream</h3>
+                        <p>SINFO will be transmitted online through our live stream to more than 20.000 people online and to many of our partner Universities that will transmit SINFO live. The Company will have their logo shown during the transmission breaks. This offers a great way of reaching people who couldn't make it to the event that particular day or at all.</p>
+                        <div class="all-50 medium-60 small-100 tiny-100 push-center">
+                            <img src="img/sponsors/liveStreamPic.jpg">
+                        </div>
                       </div>
                           </td></tr>
                   </tr>
@@ -646,6 +625,27 @@
                         <div class="all-50 medium-60 small-100 tiny-100 push-center">
                             <img src="img/sponsors/liveStreamPic.JPG">
                         </div>
+                      </div>
+                          </td></tr>
+                  </tr>
+                  <tr class="item">
+                    <td class="firstTd"><div class="toggle">+</div>Logo on pens</td><td>√</td><td class="notIncluded">x</td><td class="notIncluded">x</td><td class="notIncluded">x</td>
+                          <tr class="description"><td colspan="5" class="noPadding">
+                            <div class="shadow">
+                              <h3>Logo on pens</h3>
+                        <p>The Company logo will be on more than 2.000 pens distributed during the event.</p>
+                        <div class="all-50 medium-60 small-100 tiny-100 push-center">
+                          <img src="img/sponsors/caneta-rsz.JPG">
+                        </div>
+                      </div>
+                          </td></tr>
+                  </tr>
+                  <tr class="item alternate">
+                    <td class="firstTd"><div class="toggle">+</div>Custom commercial</td><td>√</td><td class="notIncluded">x</td><td class="notIncluded">x</td><td class="notIncluded">x</td>
+                          <tr class="description"><td colspan="5" class="noPadding">
+                            <div class="shadow">
+                              <h3>Custom commercial</h3>
+                        <p>SINFO will spread the Company's promos/commercials on the screens scattered all around the event as well as on the live stream breaks.</p>
                       </div>
                           </td></tr>
                   </tr>
@@ -839,8 +839,16 @@
                           <p><small>Banner placed at the main entrance of the IST (at Alameda campus) in the nineteenth edition of SINFO.</small></p>
                         </div>
                             </td></tr>
+                    </tr><tr class="item alternate">
+                      <td class="firstTd"><div class="toggle">+</div>Logo on online banners</td>
+                            <tr class="description"><td class="noPadding">
+                              <div class="shadow">
+                                <h3>Logo on online banners</h3>
+                          <p>The Company logo will be online on websites and blogs that are  advertising partners of SINFO.</p>
+                        </div>
+                            </td></tr>
                     </tr>
-                    <tr class="item alternate">
+                    <tr class="item">
                       <td class="firstTd"><div class="toggle">+</div>Logo on tray mats</td>
                             <tr class="description"><td class="noPadding">
                               <div class="shadow">
@@ -851,16 +859,7 @@
                           </div>
                         </div>
                             </td></tr>
-                    </tr>
-                    <tr class="item">
-                      <td class="firstTd"><div class="toggle">+</div>Logo on online banners</td>
-                            <tr class="description"><td class="noPadding">
-                              <div class="shadow">
-                                <h3>Logo on online banners</h3>
-                          <p>The Company logo will be online on websites and blogs that are  advertising partners of SINFO.</p>
-                        </div>
-                            </td></tr>
-                    </tr>
+                    </tr>                    
                     <tr class="item alternate">
                       <td class="firstTd"><div class="toggle">+</div>Logo on the flyers</td>
                             <tr class="description"><td class="noPadding">
