--- a/sponsor.html
+++ b/sponsor.html
@@ -1017,8 +1017,11 @@
 				<div class="all-100">
 					<form class="ink-form" method="post" action="php/emailRequest.php">
 					    <div class="column-group gutters">
+					    	<div class="company-control control-group all-100">
+								<input type="checkbox" id="startupCheck" name="startupCheck" value="isStartup"><label for="startupCheck">I'm a StartUp</label>
+							</div>
 					        <div class="company-control control-group all-40 small-100 tiny-100 required">
-					            <label for="company">Company or Entity</label>
+					            <label id="CompanyName" for="company">Company or Entity</label>
 					            <div class="control">
 					                <input type="text" name="company" id="required-company">
 					            </div>
