Added https to jquery link

--- a/sponsor.html
+++ b/sponsor.html
@@ -47,7 +47,7 @@
 
 		<!-- my stuff -->
     <link rel="stylesheet" type="text/css" href="css/sponsors/styles.css">
-		<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+		<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 		<script type="text/javascript" src="js/sponsors/jquery.scrollTo.min.js"></script>
 		<script type="text/javascript" src="js/sponsors/jquery.localScroll.min.js"></script>
 		<script type="text/javascript" src="js/sponsors/code.js"></script>
