Update stand and stand ++ description

--- a/sponsor.html
+++ b/sponsor.html
@@ -323,7 +323,7 @@
                           <tr class="description"><td colspan="5" class="noPadding">
                             <div class="shadow">
                               <h3>Stand and Stand ++</h3>
-                        <p>You will have the possibility to rent a (or bring your own) stand during the event, at Instituto Superior Técnico. Additionally, with “+University” pack this presence can be extended to more universities and more days, reaching an even higher number of students and potential candidates.</p>
+                        <p>You will have the possibility to rent a (or bring your own) stand during the event, at Instituto Superior Técnico. Additionally, with “+ University” pack this presence can be extended to more universities and more days, reaching an even higher number of students and potential candidates.</p>
                         <p>IST stand specifications:</p>
                         <ul>
                           <li>Dimensions: 3x3x2.5m;</li>
@@ -344,7 +344,9 @@
                               <img src="img/sponsors/stand_2.jpg">
                             </div>
                           </div>
-                          <li>Stands layout on the technological exposition in the Civil Engineering Building:<li>
+                          <ul>
+                          	<li class="infoStand">Stands layout on the technological exposition in the Civil Engineering Building:</li>
+                          </ul>
                           <div class="all-50 medium-60 small-100 tiny-100 push-center">
                             <img src="img/sponsors/MapaStandsCivil.jpg">
                           </div>
