fixed pictures and added some new

--- a/sponsor.html
+++ b/sponsor.html
@@ -198,11 +198,11 @@
                             <h3>Logo on standard rollups</h3>
                       <p>The Company logo will be on our standard rollup which is used at every event we have throughout the year (workshops, meetups, DevCamps, etc.).</p>
                       <div class="column-group push-center half-gutters">
-                          <div class="all-50 medium-60 small-100 tiny-100 push-center">
+                          <div class="all-50 medium-100 small-100 tiny-100 push-center">
                             <img src="img/sponsors/rollupAnnual.jpg">
                           </div>
-                          <div class="all-30 medium-30 small-50 tiny-50 push-center">
-                            <img src="img/sponsors/rollupAnnual2.jpg">
+                          <div class="all-50 medium-100 small-100 tiny-100 push-center">
+                            <img class="rollup" src="img/sponsors/rollupAnnual2.jpg">
                           </div>
                         </div>
                     </div>
@@ -310,8 +310,12 @@
                         </div>
                         <p></p>
                         <div class="all-50 medium-60 small-100 tiny-100 push-center">
-                          <img src="img/sponsors/apresentacao2.jpg">
-                        </div>
+                            <img src="img/sponsors/apresentacao1.jpg">
+                          </div>
+                          <p></p>
+                          <div class="all-50 medium-60 small-100 tiny-100 push-center">
+                            <img src="img/sponsors/apresentacao2.jpg">
+                          </div>
                       </div>
                           </td></tr>
                   </tr>
@@ -507,9 +511,14 @@
 							            	<div class="shadow">
 								            	<h3>Logo on the Showcase</h3>
 												<p>The Company logo will be on our Showcase panel. The Showcase is a space in the Tech Expo, reserved specially speaker interaction, exhibits, and technological demonstrations showcasing new gadgets, tools and technologies.</p>
-                        <div class="all-50 medium-60 small-100 tiny-100 push-center">
-                          <img src="img/sponsors/showcase.jpg">
-                        </div>
+						                        <div class="column-group push-center half-gutters">
+						                            <div class="all-50 medium-60 small-100 tiny-100 push-center">
+						                              <img src="img/sponsors/showcase1.jpg">
+						                            </div>
+						                            <div class="all-50 medium-60 small-100 tiny-100 push-center">
+						                              <img src="img/sponsors/showcase2.jpg">
+						                            </div>
+						                      	</div>
 											</div>
 							            </td></tr>
 									</tr>
@@ -564,9 +573,14 @@
                             <div class="shadow">
                               <h3>Logo T-shirt</h3>
                               <p>The Company logo will be on the back of our t-shirts that are sold at SINFO’s stand during the event. An average of 300 t-shirts are sold every year.</p>
-                              <div class="all-50 medium-60 small-100 tiny-100 push-center">
-                                  <img src="img/sponsors/tshirts-rsz.JPG">
-                              </div>
+                              <div class="column-group push-center half-gutters">
+	                            <div class="all-50 medium-60 small-100 tiny-100 push-center">
+	                              <img src="img/sponsors/tshirts-rsz.JPG">
+	                            </div>
+	                            <div class="all-50 medium-60 small-100 tiny-100 push-center">
+	                              <img src="img/sponsors/tshirts.JPG">
+	                            </div>
+	                          </div>
                             </div>
                           </td></tr>
                   </tr>
@@ -613,8 +627,8 @@
                               <h3>Logo during the break of our live stream</h3>
                         <p>SINFO will be transmitted online through our live stream to more than 20.000 people online and to many of our partner Universities that will transmit SINFO live. The Company will have their logo shown during the transmission breaks. This offers a great way of reaching people who couldn't make it to the event that particular day or at all.</p>
                         <div class="all-50 medium-60 small-100 tiny-100 push-center">
-                            <img src="img/sponsors/liveStreamPic.jpg">
-                        </div>
+	                        <img src="img/sponsors/liveStream.jpg">
+                      	</div>	
                       </div>
                           </td></tr>
                   </tr>
@@ -625,8 +639,8 @@
                               <h3>Logo on our live stream (At all times)</h3>
                         <p> The Company logo will be on the live stream as a watermark for more than 20.000 people to see.</p>
                         <div class="all-50 medium-60 small-100 tiny-100 push-center">
-                            <img src="img/sponsors/liveStreamPic.JPG">
-                        </div>
+	                        <img src="img/sponsors/liveStream.jpg">
+                      	</div>	
                       </div>
                           </td></tr>
                   </tr>
@@ -648,6 +662,9 @@
                             <div class="shadow">
                               <h3>Custom commercial</h3>
                         <p>SINFO will spread the Company's promos/commercials on the screens scattered all around the event as well as on the live stream breaks.</p>
+                        <div class="all-50 medium-60 small-100 tiny-100 push-center">
+	                        <img src="img/sponsors/liveStream.jpg">
+                      	</div>	
                       </div>
                           </td></tr>
                   </tr>
@@ -702,10 +719,10 @@
                                   <h3>Logo on standard rollups</h3>
                             <p>The Company logo will be on our standard rollup which is used at every event we have throughout the year (workshops, meetups, DevCamps, etc.).</p>
                             <div class="column-group push-center half-gutters">
-                                <div class="all-50 medium-60 small-100 tiny-100 push-center">
+                                <div class="all-50 medium-100 small-100 tiny-100 push-center">
                                   <img src="img/sponsors/rollupAnnual.jpg">
                                 </div>
-                                <div class="all-30 medium-30 small-50 tiny-50 push-center">
+                                <div class="all-50 medium-100 small-100 tiny-100 push-center rollup">
                                   <img src="img/sponsors/rollupAnnual2.jpg">
                                 </div>
                               </div>
@@ -874,8 +891,8 @@
                               <img src="img/sponsors/flyer_back.JPG">
                             </div>
                             <div class="all-50 medium-60 small-100 tiny-100 push-center">
-                              <img src="img/sponsors/programs.JPG">
-                            </div>
+                            	<img src="img/sponsors/programs.JPG">
+                          	</div>
                           </div>
                         </div>
                             </td></tr>
@@ -895,9 +912,14 @@
                               <div class="shadow">
                                 <h3>Logo on the Showcase</h3>
                           <p>The Company logo will be on our Showcase panel. The Showcase is a space in the Tech Expo, reserved specially speaker interaction, exhibits, and technological demonstrations showcasing new gadgets, tools and technologies.</p>
-                          <div class="all-50 medium-60 small-100 tiny-100 push-center">
-                            <img src="img/sponsors/showcase.jpg">
-                          </div>
+                            <div class="column-group push-center half-gutters">
+                                <div class="all-50 medium-60 small-100 tiny-100 push-center">
+                                  <img src="img/sponsors/showcase1.jpg">
+                                </div>
+                                <div class="all-50 medium-60 small-100 tiny-100 push-center">
+                                  <img src="img/sponsors/showcase2.jpg">
+                                </div>
+                          	</div>
                         </div>
                             </td></tr>
                     </tr>
@@ -944,18 +966,20 @@
                               <li>Two (2) chairs;</li>
                               <li>In the case of use of your own stand, the walls and lettering are removed.</li>
                             </ul>
-                              <div class="column-group push-center half-gutters">
-                                <div class="all-50 medium-60 small-100 tiny-100 push-center">
-                                  <img src="img/sponsors/stand_1.jpg">
-                                </div>
-                                <div class="all-50 medium-60 small-100 tiny-100 push-center">
-                                  <img src="img/sponsors/stand_2.jpg">
-                                </div>
-                              </div>
-                              <li>Stands layout on the technological exposition in the Civil Engineering Building:<li>
-                              <div class="all-50 medium-60 small-100 tiny-100 push-center">
-                                <img src="img/sponsors/MapaStandsCivil.jpg">
-                              </div>
+                              	<div class="column-group push-center half-gutters">
+	                              <div class="all-50 medium-60 small-100 tiny-100 push-center">
+	                                <img src="img/sponsors/stand_1.jpg">
+	                              </div>
+	                              <div class="all-50 medium-60 small-100 tiny-100 push-center">
+	                                <img src="img/sponsors/stand_2.jpg">
+	                              </div>
+	                            </div>
+	                            <ul>
+	                            	<li class="infoStand">Stands layout on the technological exposition in the Civil Engineering Building:</li>
+	                            </ul>
+	                            <div class="all-50 medium-60 small-100 tiny-100 push-center">
+	                              <img src="img/sponsors/MapaStandsCivil.jpg">
+	                            </div>
                             </div>
                           </td></tr>
                     </tr>
@@ -974,6 +998,9 @@
                               <div class="shadow">
                                 <h3>Custom commercial</h3>
                           <p>SINFO will spread the Company's promos/commercials on the screens scattered all around the event as well as on the live stream breaks.</p>
+                          <div class="all-50 medium-60 small-100 tiny-100 push-center">
+	                         <img src="img/sponsors/liveStream.jpg">
+                      		</div>	
                         </div>
                             </td></tr>
                     </tr>
@@ -984,8 +1011,8 @@
                                 <h3>Logo during the break of our live stream</h3>
                           <p>SINFO will be transmitted online through our live stream to more than 20.000 people online and to many of our partner Universities that will transmit SINFO live. The Company will have their logo shown during the transmission breaks. This offers a great way of reaching people who couldn't make it to the event that particular day or at all.</p>
                           <div class="all-50 medium-60 small-100 tiny-100 push-center">
-                              <img src="img/sponsors/liveStreamPic.jpg">
-                          </div>
+	                        <img src="img/sponsors/liveStream.jpg">
+                      	  </div>	
                         </div>
                             </td></tr>
                     </tr>
