Fixed size on item rollup anual

--- a/sponsor.html
+++ b/sponsor.html
@@ -201,8 +201,8 @@
                           <div class="all-50 medium-100 small-100 tiny-100 push-center">
                             <img src="img/sponsors/rollupAnnual.jpg">
                           </div>
-                          <div class="all-50 medium-100 small-100 tiny-100 push-center">
-                            <img class="rollup" src="img/sponsors/rollupAnnual2.jpg">
+                          <div class="all-50 medium-100 small-100 tiny-100 push-center rollup">
+                            <img src="img/sponsors/rollupAnnual2.jpg">
                           </div>
                         </div>
                     </div>
