Corrected presentation images

--- a/sponsor.html
+++ b/sponsor.html
@@ -309,12 +309,14 @@
                           <img src="img/sponsors/apresentacao1.jpg">
                         </div>
                         <p></p>
-                        <div class="all-50 medium-60 small-100 tiny-100 push-center">
-                            <img src="img/sponsors/apresentacao1.jpg">
-                          </div>
-                          <p></p>
-                          <div class="all-50 medium-60 small-100 tiny-100 push-center">
-                            <img src="img/sponsors/apresentacao2.jpg">
+                        <div class="column-group push-center half-gutters">
+                            <div class="all-50 medium-60 small-100 tiny-100 push-center">
+	                            <img src="img/sponsors/presentationAudience.jpg">
+	                          </div>
+	                          <p></p>
+	                          <div class="all-50 medium-60 small-100 tiny-100 push-center">
+	                            <img src="img/sponsors/presentationAudience2.jpg">
+	                          </div>
                           </div>
                       </div>
                           </td></tr>
@@ -474,7 +476,7 @@
                             <img src="img/sponsors/flyer_back.JPG">
                           </div>
                           <div class="all-50 medium-60 small-100 tiny-100 push-center">
-                            <img src="img/sponsors/programs.JPG">
+                            <img src="img/sponsors/programs1.JPG">
                           </div>
                         </div>
                       </div>
@@ -801,12 +803,14 @@
                           </ol>
                           <li>Congress Center – rooms with capacity for 50 or 70 students.</li>
                         </ul>
-                          <div class="all-50 medium-60 small-100 tiny-100 push-center">
-                            <img src="img/sponsors/apresentacao1.jpg">
-                          </div>
-                          <p></p>
-                          <div class="all-50 medium-60 small-100 tiny-100 push-center">
-                            <img src="img/sponsors/apresentacao2.jpg">
+                          <div class="column-group push-center half-gutters">
+                            <div class="all-50 medium-60 small-100 tiny-100 push-center">
+	                            <img src="img/sponsors/presentationAudience.jpg">
+	                          </div>
+	                          <p></p>
+	                          <div class="all-50 medium-60 small-100 tiny-100 push-center">
+	                            <img src="img/sponsors/presentationAudience2.jpg">
+	                          </div>
                           </div>
                         </div>
                             </td></tr>
@@ -891,7 +895,7 @@
                               <img src="img/sponsors/flyer_back.JPG">
                             </div>
                             <div class="all-50 medium-60 small-100 tiny-100 push-center">
-                            	<img src="img/sponsors/programs.JPG">
+                            	<img src="img/sponsors/programs1.JPG">
                           	</div>
                           </div>
                         </div>
