--- a/sponsor.html
+++ b/sponsor.html
@@ -476,7 +476,7 @@
                             <img src="img/sponsors/flyer_back.JPG">
                           </div>
                           <div class="all-50 medium-60 small-100 tiny-100 push-center">
-                            <img src="img/sponsors/programs1.JPG">
+                            <img src="img/sponsors/programs.JPG">
                           </div>
                         </div>
                       </div>
@@ -895,7 +895,7 @@
                               <img src="img/sponsors/flyer_back.JPG">
                             </div>
                             <div class="all-50 medium-60 small-100 tiny-100 push-center">
-                            	<img src="img/sponsors/programs1.JPG">
+                            	<img src="img/sponsors/programs.JPG">
                           	</div>
                           </div>
                         </div>
